--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
                     </a>
                 </div>
                 <div class="work">
-                    <a class="color-block" target="_blank" href="https://keiranevers.github.io/pets-page/01_HTML.html">Pets
+                    <a class="color-block" target="_blank" href="https://keiranevers.github.io/pets-page/index.html">Pets
                     <img src="images/Penguins.jpg" alt="Pets">
                     </a>
                 </div>
